static/css/bootstrap-overruler.css
.table.coalition-colored > :not(caption) > * > * {
	background-color: transparent !important;
}

.reactive-btn-success {
	background-color: #5cb85c !important;
	border-color: #4cae4c !important;
	color: #fff !important;
}

.reactive-btn-warning {
	background-color: #f0ad4e !important;
	border-color: #eea236 !important;
	color: #fff !important;
}

.reactive-btn-danger {
	background-color: #d9534f !important;
	border-color: #d43f3a !important;
	color: #fff !important;
}

#quiz-results-container {
	margin-left: 0 !important;
	margin-right: 0 !important;
	background: #000; /* for better darkening of non-selected coalitions by using opacity */
	overflow: hidden;
}

.quiz-result-coalition {
	display: block;
	position: relative;
	height: 360px;
	opacity: 0.5;
	user-select: none;
	box-shadow: none;
	transition: 0.075s ease-out;
}

.quiz-result-coalition-score-bg {
	display: block;
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 0%;
	background-color: rgba(255, 255, 255, 0.3);
	z-index: 1;
	transition: height 3s ease-out !important;
}

.quiz-result-coalition-content {
	display: inline-flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
	height: 100%;
	position: relative;
	z-index: 2;
}

.quiz-result-coalition-img {
	width: 100%;
	pointer-events: none; /* prevent dragging */
}

.quiz-result-coalition-name {
	word-break: break-all;
	font-weight: bold;
}

.quiz-result-coalition:has(input[type=radio]:checked) {
	opacity: 1;
	/* add bloom effect */
	box-shadow: 0 0 6px rgba(255,255,255,0.4), 0 0 12px rgba(255,255,255,0.2), 0 0 18px rgba(255,255,255,0.05);
	transition: 0s;
}

.quiz-result-coalition.calculating {
	opacity: 1 !important;
	box-shadow: none !important;
}

#results tr > td > code,
#search-results tr > td > code {
	color: inherit !important;
}

.coalition-cover {
	background-position: center center;
	background-size: cover;
	background-repeat: no-repeat;
	background-clip: border-box;
}

.user-header .user-picture {
	max-width: 100%;
	aspect-ratio: 1 / 1;
	height: auto;
	max-height: 200px;
}

.mw-500 {
	max-width: 500px;
}

.mw-700 {
	max-width: 700px;
}

